fix: prevent overflow in the horizontal direction
The `overflow-inline` CSS property is, unfortunately, not supported by
any web browser right now except firefox

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -58,6 +58,7 @@ html {
 /* if any of the following elements don't exist, the rule still applies  */
 :is(code, kbd, samp, pre) {
   font-family: var(--mono-font);
+  overflow-x: auto;
 }
 
 /* reduce distraction from text by removing underlines from hyperlinks */
